# MY_COMFY

./: README.md  logcat_app.sh  main.py  pyproject.toml  read_preview.py
json/: GGUF_WORKFLOW.json  GGUF_WORKFLOW_API.json
src/: main.py  simple_comfy_workflow.py  view.py
src/components/: connection_indicator.py  input_bar.py  setting_panel.py  status_indicator.py
src/services/: client.py  config_service.py  generation_services.py
src/utils/: data.py  logger.py
