[project]
name = "my_comfy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

# --- CHANGE IS HERE ---
dependencies = [
  "flet==0.25.2",             # Changed from "flet[all]"
  "websocket-client>=1.8.0",
  "requests>=2.31.0",
  "pillow>=10.4.0",
]
# ----------------------

[tool.uv]
# Move your dev tools here so "uv sync" still works on your PC
dev-dependencies = [
    "flet[all]==0.25.2",
    "pre-commit>=3.5.0",
]

[tool.flet]
org = "com.mycompany"
product = "my_comfy"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"